# Gestion-inmobiliaria

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .impeccable.md  .pipeline-state.json  .semgrepignore  AGENTS.md  CODEOWNERS  Caddyfile.dev  Cargo.toml  DESIGN.json  DESIGN.md  Dockerfile.backend  Dockerfile.frontend  PRODUCT.md  Trunk.toml  android-owasp-suppressions.xml  arc-runner-dind.yaml  audit_output.json  audit_output.txt  clippy.toml  deny.toml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.runner.yml  docker-compose.yml  helm-rendered.yaml  lessons-learned.md  owasp-suppressions.xml  requirements.txt  sonar-project.properties  test-output.txt  tmp_xpusmi_job.yaml
backend/: .env  Cargo.toml
backend/migrations/: m20250408_000001_create_usuarios.rs  m20250408_000002_create_propiedades.rs  m20250408_000003_create_inquilinos.rs  m20250408_000004_create_contratos.rs  m20250408_000005_create_pagos.rs  m20250409_000001_create_registros_auditoria.rs  m20250409_000002_create_documentos.rs  m20250409_000003_create_configuracion.rs  m20250409_000004_add_documentos_columns.rs  m20250410_000001_create_unidades.rs  m20250411_000001_create_solicitudes_mantenimiento.rs  m20250411_000002_create_notas_mantenimiento.rs  m20250412_000001_create_gastos.rs  m20250413_000001_create_organizaciones.rs  m20250413_000002_add_organizacion_id.rs  m20250413_000003_create_invitaciones.rs  m20250430_000001_extend_documentos_legal.rs  m20250430_000002_add_documentos_editor.rs  m20250430_000003_create_plantillas_documento.rs  m20250501_000001_create_notificaciones.rs  m20250601_000001_create_ejecuciones_tareas.rs  m20250615_000001_add_deposit_tracking_to_contratos.rs  m20250615_000002_add_recargo_fields.rs  m20250620_000001_create_firmas_documento.rs  m20260415_001_add_documento_origen_id.rs  m20260415_002_add_gasto_utility_fields.rs  m20260509_000001_create_chatbot_tables.rs  m20260510_000001_make_auditoria_usuario_nullable.rs  m20260510_000002_create_whatsapp_auth_tables.rs  m20260512_000001_add_utility_fields_to_gastos.rs  m20260512_000002_create_desahucios.rs  m20260512_000003_create_responsabilidad_servicios.rs  m20260512_000004_create_cache_dgii.rs  m20260513_000001_create_preview_index.rs  m20260514_000001_add_agent_config_and_eval_tables.rs  m20260601_000001_add_tipo_fiscal_to_organizaciones.rs  m20260601_000002_add_fiscal_columns_to_pagos.rs  m20260601_000003_add_catastral_to_propiedades.rs  m20260601_000004_create_cuotas_condominio.rs  m20260601_000005_create_secuencias_ncf.rs  (+18 more)
backend/proptest-regressions/harness/: harness_pbt.txt
backend/proptest-regressions/services/: chatbot_pbt.txt  firmas_pbt.txt  fiscal_pbt.txt  ocr_mapping_pbt.txt
backend/src/: app.rs  config.rs  errors.rs  lib.rs  main.rs  metrics.rs  routes.rs  semgrep_test_violations.rs  telemetry.rs
backend/src/entities/: cache_dgii.rs  chatbot_config.rs  chatbot_conversation.rs  chatbot_eval_run.rs  chatbot_eval_suite.rs  chatbot_receipt_extraction.rs  configuracion.rs  configuracion_ipi.rs  contrato.rs  copropietario.rs  cuota_condominio.rs  desahucio.rs  documento.rs  ejecucion_tarea.rs  firma_documento.rs  gasto.rs  gasto_recurrente.rs  inquilino.rs  invitacion.rs  mantenimiento_programado.rs  mod.rs  nota_mantenimiento.rs  notificacion.rs  organizacion.rs  pago.rs  plantilla_documento.rs  prelude.rs  preview_index.rs  propiedad.rs  recibo_informal.rs  registro_auditoria.rs  reporte_dgii.rs  responsabilidad_servicio.rs  secuencia_ncf.rs  solicitud_mantenimiento.rs  unidad.rs  (+1 more)
backend/tests/: agent_loop_bug_pbt.rs  ai_module_pbt.rs  architecture_tests.rs  auditoria_tests.rs  auth_pbt.rs  auth_tests.rs  background_jobs_pbt.rs  background_jobs_tests.rs  chatbot_evals_tests.rs  chatbot_pbt.rs  chatbot_self_message_pbt.rs  common.rs  contratos_overlap_cascade_tests.rs  contratos_tests.rs  deposit_tracking_pbt.rs  deposit_tracking_tests.rs  desahucios_tests.rs  dgii_tests.rs  document_preservation_pbt.rs  documentos_pbt.rs  documentos_tests.rs  dr_compliance_integration_tests.rs  dr_legal_compliance_pbt.rs  firmas_pbt.rs  firmas_tests.rs  gastos_pbt.rs  gastos_tests.rs  importacion_pbt.rs  inquilinos_tests.rs  invitaciones_bug_condition_pbt.rs  invitaciones_preservation_pbt.rs  ipc_tests.rs  late_fees_pbt.rs  late_fees_tests.rs  ley85_bug_condition_pbt.rs  ley85_preservation_pbt.rs  main.rs  mantenimiento_pbt.rs  mantenimiento_tests.rs  ncf_bug_condition_pbt.rs  (+23 more)
frontend/: Cargo.toml  Trunk.toml  index.html  manifest.webmanifest  service-worker.js  tailwind.config.js
frontend/js/: app-loaded.js  error-handler.js  service-worker-register.js  theme-init.js
frontend/scripts/: extract-inline-scripts.ps1  extract-inline-scripts.sh
frontend/src/: app.rs  lib.rs  main.rs  utils.rs
frontend/styles/: fonts.css  tailwind.css
frontend/tests/: csp_cloudflare_bug_condition_pbt.proptest-regressions  csp_cloudflare_bug_condition_pbt.rs  csp_preservation_pbt.rs  document_management_tests.rs  document_url_bug_condition_pbt.proptest-regressions  document_url_bug_condition_pbt.rs  existing_routes_preservation_pbt.proptest-regressions  existing_routes_preservation_pbt.rs  hamburger_bug_condition_pbt.proptest-regressions  hamburger_bug_condition_pbt.rs  hamburger_preservation_pbt.rs  init_logging_tests.proptest-regressions  init_logging_tests.rs  integration_tests.rs  landing_feature_card_pbt.rs  landing_routes_tests.rs  landing_secondary_cta_pbt.rs  landing_step_card_pbt.rs  login_401_bug_condition_pbt.proptest-regressions  login_401_bug_condition_pbt.rs  login_401_preservation_pbt.rs  missing_routes_pbt.proptest-regressions  missing_routes_pbt.rs  nombre_validation_bug_condition_pbt.proptest-regressions  nombre_validation_bug_condition_pbt.rs  nombre_validation_preservation_pbt.rs  pagos_pagination_bug_condition_pbt.proptest-regressions  pagos_pagination_bug_condition_pbt.rs  pagos_pagination_preservation_pbt.rs  pwa_tests.rs  register_form_props.rs  servicios_publicos_bug_condition_pbt.rs  servicios_publicos_preservation_pbt.rs  servicios_publicos_regression_pbt.rs
(+1702 files in other folders)
