[workspace]
resolver = "3"
members = ["backend", "frontend"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
futures-util = "0.3"
wasm-bindgen = "0.2.118"
proptest = "1"

[profile.release]
lto = "thin"
opt-level = "z"
codegen-units = 1
strip = true

# CI release profile: faster builds, still optimized enough for integration tests
# Use with: cargo build --profile ci-release
[profile.ci-release]
inherits = "release"
lto = "thin"
opt-level = 2
codegen-units = 16
strip = true

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1
