[package]
name = "realestate-backend"
version = "0.1.0"
edition = "2024"
publish = false
autotests = false

[lints]
workspace = true

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
dotenvy = "0.15"
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
actix-governor = "0.6"
actix-web-prom = "0.9"
prometheus = "0.13"
actix-multipart = "0.7"
actix-files = "0.6"
futures-util.workspace = true
numaelis-rckive-genpdf = "0.4"
rust_xlsxwriter = "0.94"
csv = "1"
calamine = "0.34"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "multipart", "json", "rustls-tls", "stream"] }
rig-core = { version = "0.36", default-features = false, features = ["rustls"] }
dashmap = "6"
docx-rs = "0.4"
rand = "0.8"
base64 = "0.22"
infer = "0.16"
tokio-util = { version = "0.7", features = ["rt"] }

[[test]]
name = "integration"
path = "tests/main.rs"

[dev-dependencies]
proptest.workspace = true
zip = "2"
