[package]
name = "realestate-backend"
version = "0.1.0"
edition = "2024"
publish = false
autotests = false

[lints]
workspace = true

[dependencies]
actix-web = { version = "4", features = ["compress-gzip", "compress-zstd"] }
actix-cors = "0.7"
tokio.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken = { version = "=10.4.0", features = ["rust_crypto"] }
argon2 = "=0.5.3"
dotenvy = "0.15"
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.33"
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
actix-governor = "0.6"
actix-web-prom = "0.10"
prometheus = "0.14"
actix-multipart = "0.7"
actix-files = "0.6"
futures-util.workspace = true
numaelis-rckive-genpdf = "0.4"
rust_xlsxwriter = "0.95"
csv = "1"
calamine = "0.35"
reqwest = { version = "0.13", default-features = false, features = [
    "charset",
    "http2",
    "multipart",
    "json",
    "query",
    "rustls",
    "stream",
] }
regex = "1"
rig = { package = "rig-core", version = "0.37", default-features = false, features = [
    "rustls",
] }
schemars = "1"
eventsource-stream = "0.2"
async-stream = "0.3"
dashmap = "6.2.1"
docx-rs = "0.4"
rand = "0.10"
base64 = "0.22"
infer = "0.19"
tokio-util = { version = "0.7", features = ["rt"] }
clap = { version = "4", features = ["derive"], optional = true }
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "tokio1",
    "smtp-transport",
    "file-transport",
    "builder",
] }
subtle = "2"

[[test]]
name = "integration"
path = "tests/main.rs"

[[bin]]
name = "eval-runner"
path = "src/bin/eval_runner.rs"
required-features = ["evals"]

[features]
evals = ["dep:clap"]

[dev-dependencies]
proptest.workspace = true
zip = "8"
actix-http = "3"
