[package]
name = "realestate-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo-net = { version = "0.6", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
gloo-timers = "0.3"
web-sys = { version = "0.3", features = ["Window", "Storage", "Location", "HtmlSelectElement"] }

[dev-dependencies]
proptest = "1"
