[package]
name = "realestate-frontend"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo-net = { version = "0.6", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4"
futures = "0.3"
gloo-timers = "0.3"
gloo-events = "0.3"
web-sys = { version = "0.3", features = ["Window", "Storage", "Location", "HtmlSelectElement", "HtmlInputElement", "HtmlElement", "File", "FileList", "FormData", "Blob", "Navigator", "Document", "KeyboardEvent", "EventTarget", "console"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
proptest = "1"
