[package]
name = "realestate-frontend"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
yew = { version = "0.23", features = ["csr"] }
yew-router = "0.20"
gloo-net = { version = "0.6", features = ["http"] }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
futures = "0.3"
gloo-timers = "0.3"
gloo-events = "0.3"
web-sys = { version = "0.3", features = ["Window", "Storage", "Location", "HtmlSelectElement", "HtmlInputElement", "HtmlElement", "File", "FileList", "FormData", "Blob", "Navigator", "Document", "KeyboardEvent", "EventTarget", "console"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
proptest.workspace = true
