[package]
name = "dashboard-aggregation-bench"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dashboard_bench"
harness = false

[lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
