[package]
name = "dashboard-aggregation-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
path = "bench.rs"

[lib]
name = "dashboard_aggregation"
path = "optimized.rs"
