[package]
name = "payment-search-bench"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "payment_search"
harness = false
